# grpc-playground

./: README.md
proto/: events.proto
rust/: Cargo.toml  build.rs
rust/src/: client.rs  server.rs
